tests/ui/parser/issues/issue-58856-1.rs
impl A {
    fn b(self>
} //~ ERROR mismatched closing delimiter

fn main() {}
